--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
     <!-- Bootstrap Core CSS ––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom CSS ––––––––––––––––––––––––––– -->
-       <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- fontawesome ––––––––––––––––––––––––––– -->
     <script src="https://kit.fontawesome.com/5c9f2dfb26.js"></script>
     <!-- To add google fonts and paste the link here -->
-    
+
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cantarell|Comfortaa|Josefin+Sans|M+PLUS+1p|Press+Start+2P|Roboto+Condensed&display=swap" rel="stylesheet">
@@ -32,10 +32,10 @@
     <div class="containter pt-5 pl-5 pr-5">
         <div class="row pt-5">
             <div class="col-sm-3">
-                <!-- logo -->
-
                 <ul class="text-right" style="list-style-type:none;">
-                    <li><p style="font-size:3vw;" >CHRIS LEE</p></li>
+                    <li>
+                        <p style="font-size:3vw;">CHRIS LEE</p>
+                    </li>
                     <li><a href="index.html">Home</a></li>
                     <li>Design</li>
                     <li>Projects</li>
@@ -43,17 +43,18 @@
                     <li><a href="about.html">About Me</a></li>
                     <li>Contact Me</li>
                 </ul>
-        </div>
-        <div class="col-sm-9">
-            <p>My name is Chris Lee, and I am a Sophomore studying Computer Science at Rice University of Houston, Texas. Feel free to check out my projects and experience and reach out to me if you have any questions! Or if you want to chat. I am current seeking a summer software engineering internship. Some of my passions outside of comuter science are making music and swimming.</p>
-            <br/>
-            <p>Some links to my social media</p>
-            <ul style="list-style-type:none;">
-                <li><a href="https://www.linkedin.com/in/joyce-lee-741704136/" target="_blank">Linked In</a></li>
-                <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
-                <li><a href="https://joylee.herokuapp.com" target="_blank">Website</a></li>
-            </ul>
-        </div>
+            </div>
+            <div class="col-sm-9">
+                <p>My name is Chris Lee, and I am a Sophomore studying Computer Science at Rice University of Houston, Texas. Feel free to check out my projects and experience and reach out to me if you have any questions! Or if you want to chat. I am current
+                    seeking a summer software engineering internship. Some of my passions outside of comuter science are making music and swimming.</p>
+                <br/>
+                <p>Some links to my social media</p>
+                <ul style="list-style-type:none;">
+                    <li><a href="https://www.linkedin.com/in/joyce-lee-741704136/" target="_blank">Linked In</a></li>
+                    <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+                    <li><a href="https://joylee.herokuapp.com" target="_blank">Website</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
