--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="col-sm-12">
                 <div class="centered text-center">
                     <h1 class="white"> My name is Chris Lee</h1>
+                    <p>Scroll down to learn more about me.</p>
                     <a class="white button" href="img/resumee.pdf" target="_blank">DONWLOAD RESUME</a>
                 </div>
             </div>
