--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,15 @@
     <title>About</title>
 
     <!-- Bootstrap Core CSS ––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <!-- Custom CSS ––––––––––––––––––––––––––– -->
     <link href="css/style.css" rel="stylesheet">
     <!-- fontawesome ––––––––––––––––––––––––––– -->
     <script src="https://kit.fontawesome.com/5c9f2dfb26.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/animation.js"></script>
     <!-- To add google fonts and paste the link here -->
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -44,29 +48,83 @@
                     <li>Contact Me</li>
                 </ul>
             </div>
-            <div class="col-sm-9">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/home_image_mobile.jpg" class="d-block w-100" alt="...">
+            <!-- <div class="col-sm-9"> -->
+
+            <!-- Images used to open the lightbox -->
+            <!-- <div class="row"> -->
+            <div class="column col-sm-4">
+                <img src="img/home_image_web.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+            </div>
+            <div class="column col-sm-4">
+                <img src="img/10.PNG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+            </div>
+            <div class="column col-sm-4">
+                <img src="img/3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
+            </div>
+            <div class="column col-sm-4">
+                <img src="img/home_image_web.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+            </div>
+            <!-- </div> -->
+
+            <!-- The Modal/Lightbox -->
+            <div id="myModal" class="modal">
+
+
+                <span class="close cursor" onclick="closeModal()">&times;</span>
+
+                <div class="containter pt-5 pl-5 pr-5">
+                    <div class="row pt-5">
+                        <div class="col-sm-8">
+
+                            <div class="modal-content">
+
+                                <div class="mySlides">
+                                    <div class="numbertext">1 / 4</div>
+                                    <img class="demo" src="img/home_image_web.jpg" style="width:100%" alt="number1">
+                                </div>
+
+                                <div class="mySlides">
+                                    <div class="numbertext">2 / 4</div>
+                                    <img class="demo" src="img/10.PNG" style="width:100%" alt="number2">
+                                </div>
+
+                                <div class="mySlides">
+                                    <div class="numbertext">3 / 4</div>
+                                    <img class="demo" src="img/3.JPG" style="width:100%" alt="number3">
+                                </div>
+
+                                <div class="mySlides">
+                                    <div class="numbertext">4 / 4</div>
+                                    <img class="demo" src="img/home_image_web.jpg" style="width:100%" alt="number4">
+                                </div>
+
+                                <!-- Next/previous controls -->
+                                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="img/home_image_mobile.jpg" class="d-block w-100" alt="...">
+
+
+                        <div class="col-sm-4">
+                            <p id="demo">Caption</p>
+
+                            <!-- Caption text -->
+                            <div class="caption-container">
+                                <p id="caption"></p>
+                            </div>
+
+
                         </div>
-                        <div class="carousel-item">
-                            <img src="img/home_image_mobile.jpg" class="d-block w-100" alt="...">
-                        </div>
+
+
+
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
             </div>
+
+            <!-- </div> -->
         </div>
     </div>
 
