--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     </li>
                     <li><a href="index.html">Home</a></li>
                     <li>Design</li>
-                    <li>Projects</li>
+                    <li><a href="portfolio.html">Projects</a></li>
                     <li>Experience</li>
                     <li><a href="about.html">About Me</a></li>
                     <li>Contact Me</li>
