--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                     </li>
                     <li><a href="index.html">Home</a></li>
                     <li>Design</li>
-                    <li>Projects</li>
+                    <li><a href="portfolio.html">Projects</a></li>
                     <li>Experience</li>
                     <li><a href="about.html">About Me</a></li>
                     <li>Contact Me</li>
@@ -53,7 +53,7 @@
             <!-- Images used to open the lightbox -->
             <!-- <div class="row"> -->
             <div class="column col-sm-4">
-                <img src="img/home_image_web.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+                <img src="img/3.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
             </div>
             <div class="column col-sm-4">
                 <img src="img/10.PNG" onclick="openModal();currentSlide(2)" class="hover-shadow">
@@ -62,8 +62,9 @@
                 <img src="img/3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
             </div>
             <div class="column col-sm-4">
-                <img src="img/home_image_web.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+                <img src="img/10.PNG" onclick="openModal();currentSlide(4)" class="hover-shadow">
             </div>
+
             <!-- </div> -->
 
             <!-- The Modal/Lightbox -->
@@ -74,28 +75,28 @@
 
                 <div class="containter pt-5 pl-5 pr-5">
                     <div class="row pt-5">
-                        <div class="col-sm-8">
+                        <div class="col-sm-7">
 
                             <div class="modal-content">
 
                                 <div class="mySlides">
                                     <div class="numbertext">1 / 4</div>
-                                    <img class="demo" src="img/home_image_web.jpg" style="width:100%" alt="number1">
+                                    <img class="demo" src="img/3.JPG" style="width:100%" alt="This is image number one.">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">2 / 4</div>
-                                    <img class="demo" src="img/10.PNG" style="width:100%" alt="number2">
+                                    <img class="demo" src="img/10.PNG" style="width:100%" alt="This is image number two.">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">3 / 4</div>
-                                    <img class="demo" src="img/3.JPG" style="width:100%" alt="number3">
+                                    <img class="demo" src="img/3.JPG" style="width:100%" alt="This is image number three.">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">4 / 4</div>
-                                    <img class="demo" src="img/home_image_web.jpg" style="width:100%" alt="number4">
+                                    <img class="demo" src="img/10.PNG" style="width:100%" alt="This is image number four.">
                                 </div>
 
                                 <!-- Next/previous controls -->
@@ -107,8 +108,8 @@
                         </div>
 
 
-                        <div class="col-sm-4">
-                            <p id="demo">Caption</p>
+                        <div class="col-sm-5">
+                            <p id="demo">Image</p>
 
                             <!-- Caption text -->
                             <div class="caption-container">
@@ -117,7 +118,6 @@
 
 
                         </div>
-
 
 
                     </div>
