--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link href="https://fonts.googleapis.com/css?family=Cantarell|Comfortaa|Josefin+Sans|M+PLUS+1p|Press+Start+2P|Roboto+Condensed&display=swap" rel="stylesheet">
     <!-- Favicon––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+
+    <script src="js/index.js"></script>
+
 </head>
 
 <body>
@@ -32,7 +35,7 @@
             <div class="col-sm-12">
                 <div class="centered text-center">
                     <h1 class="white"> My name is Chris Lee</h1>
-                    <p>Scroll down to learn more about me.</p>
+                    <p id="typing"></p>
                     <a class="white button" href="img/resumee.pdf" target="_blank">DONWLOAD RESUME</a>
                 </div>
             </div>
@@ -40,10 +43,12 @@
     </div>
     <!-- </div> -->
 
+
+
     <ul class="text-center" style="list-style-type:none;">
         <li><a href="index.html">Home</a></li>
         <li>Design</li>
-        <li>Projects</li>
+        <li><a href="portfolio.html">Projects</a></li>
         <li>Experience</li>
         <li><a href="about.html">About Me</a></li>
         <li>Contact Me</li>
