--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 <body>
 
     <div class="containter pt-5 pl-5 pr-5">
-        <div class="row pt-5">
+        <div class="row pt-5 padding">
             <div class="col-sm-3">
                 <ul class="text-right" style="list-style-type:none;">
                     <li>
@@ -48,24 +48,35 @@
                     <li>Contact Me</li>
                 </ul>
             </div>
-            <!-- <div class="col-sm-9"> -->
+            <div class="col-sm-9">
+                <div class="row row-padding">
 
-            <!-- Images used to open the lightbox -->
-            <!-- <div class="row"> -->
-            <div class="column col-sm-4">
-                <img src="img/3.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
-            </div>
-            <div class="column col-sm-4">
-                <img src="img/10.PNG" onclick="openModal();currentSlide(2)" class="hover-shadow">
-            </div>
-            <div class="column col-sm-4">
-                <img src="img/3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
-            </div>
-            <div class="column col-sm-4">
-                <img src="img/10.PNG" onclick="openModal();currentSlide(4)" class="hover-shadow">
-            </div>
+                    <!-- <div class="row"> -->
+                    <div class="column col-sm-4">
+                        <img src="img/3.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+                    </div>
+                    <div class="column col-sm-4">
+                        <img src="img/10.PNG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+                    </div>
+                    <div class="column col-sm-4">
+                        <img src="img/3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
+                    </div>
 
-            <!-- </div> -->
+                </div>
+
+                <div class="row row-padding">
+                    <!-- <div class="row"> -->
+                    <div class="column col-sm-4">
+                        <img src="img/10.PNG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+                    </div>
+                    <div class="column col-sm-4">
+                        <img src="img/3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
+                    </div>
+                    <div class="column col-sm-4">
+                        <img src="img/10.PNG" onclick="openModal();currentSlide(4)" class="hover-shadow">
+                    </div>
+                </div>
+            </div>
 
             <!-- The Modal/Lightbox -->
             <div id="myModal" class="modal">
@@ -74,8 +85,8 @@
                 <span class="close cursor" onclick="closeModal()">&times;</span>
 
                 <div class="containter pt-5 pl-5 pr-5">
-                    <div class="row pt-5">
-                        <div class="col-sm-7">
+                    <div class="row pt-5 padding">
+                        <div class="col-sm-6">
 
                             <div class="modal-content">
 
@@ -108,7 +119,7 @@
                         </div>
 
 
-                        <div class="col-sm-5">
+                        <div class="col-sm-6">
                             <p id="demo">Image</p>
 
                             <!-- Caption text -->
