--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 <body>
 
     <!-- <div class="view main-text"> -->
-    <div class="container-fluid view main-text">
+    <div class="container-fluid view main-text text-center">
         <div class="row align-items-center">
             <div class="col-sm-12">
                 <div class="centered text-center">
                     <h1 class="white"> My name is Chris Lee</h1>
-                    <p id="typing"></p>
+                    <p id="typing"> &nbsp;</p>
                     <a class="white button" href="img/resumee.pdf" target="_blank">DONWLOAD RESUME</a>
                 </div>
             </div>
