--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             <div class="col-sm-3">
                 <ul class="text-right" style="list-style-type:none;">
                     <li>
-                        <p style="font-size:3vw;">CHRIS LEE</p>
+                        <p style="font-size:2rem;">CHRIS LEE</p>
                     </li>
                     <li><a href="index.html">Home</a></li>
                     <li>Design</li>
@@ -67,12 +67,6 @@
                 <div class="row row-padding">
                     <!-- <div class="row"> -->
                     <div class="column col-sm-4">
-                        <img src="img/10.PNG" onclick="openModal();currentSlide(2)" class="hover-shadow">
-                    </div>
-                    <div class="column col-sm-4">
-                        <img src="img/3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
-                    </div>
-                    <div class="column col-sm-4">
                         <img src="img/10.PNG" onclick="openModal();currentSlide(4)" class="hover-shadow">
                     </div>
                 </div>
@@ -92,22 +86,22 @@
 
                                 <div class="mySlides">
                                     <div class="numbertext">1 / 4</div>
-                                    <img class="demo" src="img/3.JPG" style="width:100%" alt="This is image number one.">
+                                    <img src="img/3.JPG" style="width:100%" alt="This is image number one. ">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">2 / 4</div>
-                                    <img class="demo" src="img/10.PNG" style="width:100%" alt="This is image number two.">
+                                    <img src="img/10.PNG" style="width:100%" alt="This is image number two.">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">3 / 4</div>
-                                    <img class="demo" src="img/3.JPG" style="width:100%" alt="This is image number three.">
+                                    <img src="img/3.JPG" style="width:100%" alt="This is image number three.">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">4 / 4</div>
-                                    <img class="demo" src="img/10.PNG" style="width:100%" alt="This is image number four.">
+                                    <img src="img/10.PNG" style="width:100%" alt="This is image number four.">
                                 </div>
 
                                 <!-- Next/previous controls -->
@@ -120,12 +114,23 @@
 
 
                         <div class="col-sm-6">
-                            <p id="demo">Image</p>
+                            <div class="demo">
+                                <p>Title: <br/> Procreate of iPad pro <br/> </p>
+                            </div>
+                            <div class="demo">
+                                <p>this is image 2</p>
+                            </div>
+                            <div class="demo">
+                                <p>this is image 3</p>
+                            </div>
+                            <div class="demo">
+                                <p>this is image 4</p>
+                            </div>
 
                             <!-- Caption text -->
-                            <div class="caption-container">
+                            <!-- <div class="caption-container">
                                 <p id="caption"></p>
-                            </div>
+                            </div> -->
 
 
                         </div>
