--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <div class="col-sm-3">
                 <ul class="text-right" style="list-style-type:none;">
                     <li>
-                        <p style="font-size:3vw;">CHRIS LEE</p>
+                        <p style="font-size:2rem;">CHRIS LEE</p>
                     </li>
                     <li><a href="index.html">Home</a></li>
                     <li>Design</li>
