--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <li><a href="portfolio.html">Projects</a></li>
                     <li>Experience</li>
                     <li><a href="about.html">About Me</a></li>
-                    <li>Contact Me</li>
+                    <li><a href="contact.html">Contact Me</a></li>
                 </ul>
             </div>
             <div class="col-sm-9">
