--- a/portfolio.html
+++ b/portfolio.html
@@ -14,14 +14,12 @@
 
     <!-- Bootstrap Core CSS ––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
     <!-- Custom CSS ––––––––––––––––––––––––––– -->
     <link href="css/style.css" rel="stylesheet">
     <!-- fontawesome ––––––––––––––––––––––––––– -->
     <script src="https://kit.fontawesome.com/5c9f2dfb26.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="js/animation.js"></script>
     <!-- To add google fonts and paste the link here -->
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -45,7 +43,7 @@
                     <li><a href="portfolio.html">Projects</a></li>
                     <li>Experience</li>
                     <li><a href="about.html">About Me</a></li>
-                    <li>Contact Me</li>
+                    <li><a href="contact.html">Contact Me</a></li>
                 </ul>
             </div>
             <div class="col-sm-9">
@@ -53,13 +51,13 @@
 
                     <!-- <div class="row"> -->
                     <div class="column col-sm-4">
-                        <img src="img/3.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+                        <img src="img/shoe1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
                     </div>
                     <div class="column col-sm-4">
-                        <img src="img/10.PNG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+                        <img src="img/9.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
                     </div>
                     <div class="column col-sm-4">
-                        <img src="img/3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
+                        <img src="img/10.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
                     </div>
 
                 </div>
@@ -67,41 +65,41 @@
                 <div class="row row-padding">
                     <!-- <div class="row"> -->
                     <div class="column col-sm-4">
-                        <img src="img/10.PNG" onclick="openModal();currentSlide(4)" class="hover-shadow">
+                        <img src="img/11.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
                     </div>
                 </div>
             </div>
 
             <!-- The Modal/Lightbox -->
-            <div id="myModal" class="modal">
+            <div id="myModal" class="modal padding">
 
 
                 <span class="close cursor" onclick="closeModal()">&times;</span>
 
-                <div class="containter pt-5 pl-5 pr-5">
-                    <div class="row pt-5 padding">
+                <div class="containter pt-5 pl-5 pr-5 ">
+                    <div class="row pt-5 ">
                         <div class="col-sm-6">
 
                             <div class="modal-content">
 
                                 <div class="mySlides">
                                     <div class="numbertext">1 / 4</div>
-                                    <img src="img/3.JPG" style="width:100%" alt="This is image number one. ">
+                                    <img src="img/shoe1.jpg" style="width:100%" alt="This is image number one. ">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">2 / 4</div>
-                                    <img src="img/10.PNG" style="width:100%" alt="This is image number two.">
+                                    <img src="img/9.jpg" style="width:100%" alt="This is image number two.">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">3 / 4</div>
-                                    <img src="img/3.JPG" style="width:100%" alt="This is image number three.">
+                                    <img src="img/10.png" style="width:100%" alt="This is image number three.">
                                 </div>
 
                                 <div class="mySlides">
                                     <div class="numbertext">4 / 4</div>
-                                    <img src="img/10.PNG" style="width:100%" alt="This is image number four.">
+                                    <img src="img/11.jpg" style="width:100%" alt="This is image number four.">
                                 </div>
 
                                 <!-- Next/previous controls -->
@@ -115,23 +113,29 @@
 
                         <div class="col-sm-6">
                             <div class="demo">
-                                <p>Title: <br/> Procreate of iPad pro <br/> </p>
+                                <p><br/>FILA Ray Tracer Sneaker </br> $ 75 </br> <i>Details </br> 
+                                    Product Sku: 49278781 ; Color Code: 023 </br> 
+                                </br>  </br> 
+                                    Combine retro design with modern chunky style wearing this FILA sneaker. Suede + leather upper with embroidered FILA branding on the tongue, vamp and back counter. Complete with a cushioned EVA foam midsole and thick rubber bottom.
+                                </br>  </br> 
+                                    Content + Care </br> 
+                                    - Upper: suede, leather, textile </br> 
+                                    - Outsole: 100% rubber </br> 
+                                    - Spot clean </br> 
+                                    - Imported </br> 
+                                </br> 
+                                    Size + Fit </br> 
+                                    - Small to fit; order ½ size up </i></p>
                             </div>
                             <div class="demo">
-                                <p>this is image 2</p>
+                                <p><br/> <i>Untitled </i><br/>Procreate of iPad pro <br/> I drew this image on the beach, inspired by the colors of nature... </p>
                             </div>
                             <div class="demo">
-                                <p>this is image 3</p>
+                                <p><br/> <i>Untitled </i> <br/>Procreate of iPad pro <br/> A practice that I did to practice drawing jewelry on people.</p>
                             </div>
                             <div class="demo">
-                                <p>this is image 4</p>
+                                <p><br/> <i>Untitled </i> <br/>Procreate of iPad pro <br/> A practice piece to practice a more illustration, almost story-book style.</p>
                             </div>
-
-                            <!-- Caption text -->
-                            <!-- <div class="caption-container">
-                                <p id="caption"></p>
-                            </div> -->
-
 
                         </div>
 
