--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
 
 
     <ul class="text-center" style="list-style-type:none;">
+        <li>
+            <p style="font-size:2rem;">CHRIS LEE</p>
+        </li>
         <li><a href="index.html">Home</a></li>
         <li>Design</li>
         <li><a href="portfolio.html">Projects</a></li>
         <li>Experience</li>
         <li><a href="about.html">About Me</a></li>
-        <li>Contact Me</li>
+        <li><a href="contact.html">Contact Me</a></li>
     </ul>
 
     <footer class="text-center">
