--- a/contact.html
+++ b/contact.html
@@ -31,37 +31,50 @@
 
     <div class="containter pt-5 pl-5 pr-5">
         <div class="row pt-5">
-            <div class="col-sm-3">
-                <ul class="text-right" style="list-style-type:none;">
-                    <li>
+            <div class="col-lg-2">
+
+                <nav class="navbar navbar-expand-lg navbar-light  navbackground">
+
+                    <!--        <div class="container"> set a margin on both sides of the navigation-->
+
+
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="navbar-brand" style="margin-left:auto; margin-right:0.9rem;" href="index.html">
                         <p style="font-size:2rem;">CHRIS LEE</p>
-                    </li>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Design</li>
-                    <li><a href="portfolio.html">Projects</a></li>
-                    <li>Experience</li>
-                    <li><a href="about.html">About Me</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
-                </ul>
+                    </div>
+                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <ul class="nav nav-stacked ml-auto justify-content-end">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item" "><a class="nav-link " href="portfolio.html ">Projects</a></li>
+                            <li class="nav-item "><a class="nav-link " href="about.html ">About Me</a></li>
+                            <li class="nav-item active "><a class="nav-link " href="contact.html ">Contact Me<span class="sr-only ">(current)</span></a></li>
+
+                        </ul>
+
+                    </div>
+                    <!--</div>-->
+                </nav>
+
+
             </div>
-            <div class="col-sm-9 container contact">
+            <div class="col-lg-10 container contact ">
                 <p>Contact</p>
 
                 <p>For commissions, inquiries, et malesuada fames ac ante ipsum primis in faucibus. Nam ultricies, ante nec porttitor sagittis, urna nibh ultrices neque, ut finibus nisi odio nec nibh.</p>
-                <!-- <h4>Email</h4>
-                            <p><a href="mailto:youremail@email.com "> Youremail.email.com</a></p>
-                            <h4>Telephone</h4>
-                            <p><a href=" tel:+353123456789 ">234-456-789</a></p> -->
 
-
-                <!--                Replace the form script generated from the jotform.com-->
-                <script type="text/javascript" src="https://form.jotform.com/jsform/93214432023141"></script>
+                <script type="text/javascript " src="https://form.jotform.com/jsform/93214432023141 "></script>
             </div>
         </div>
 
-        <footer class="text-center">
-            <a href="https://joylee.herokuapp.com" target="_blank">Created by Joyce Lee | 2019</a>
+        <footer class="text-center ">
+            <a href="https://joylee.herokuapp.com " target="_blank ">Created by Joyce Lee | 2019</a>
         </footer>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+
+        
 </body>
 
 </html>
