--- a/portfolio.html
+++ b/portfolio.html
@@ -33,86 +33,100 @@
 
     <div class="containter pt-5 pl-5 pr-5">
         <div class="row pt-5 padding">
-            <div class="col-sm-3">
-                <ul class="text-right" style="list-style-type:none;">
-                    <li>
-                        <p style="font-size:2rem;">CHRIS LEE</p>
-                    </li>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Design</li>
-                    <li><a href="portfolio.html">Projects</a></li>
-                    <li>Experience</li>
-                    <li><a href="about.html">About Me</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-9">
-                <div class="row row-padding">
+            <div class="col-lg-2">
 
-                    <!-- <div class="row"> -->
-                    <div class="column col-sm-4">
-                        <img src="img/shoe1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+
+                <!-- <nav class="navbar navbar-expand-lg navbar-light  navbackground">
+
+                           <div class="container"> 
+
+
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="navbar-brand" style="margin-left:auto; margin-right:0.9rem;" href="index.html">
+                        <p style="font-size:2rem;">CHRIS LEE</p>
                     </div>
-                    <div class="column col-sm-4">
-                        <img src="img/9.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <ul class="nav nav-stacked ml-auto justify-content-end">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item" "><a class="nav-link " href="portfolio.html ">Projects</a></li>
+                            <li class="nav-item "><a class="nav-link " href="about.html ">About Me</a></li>
+                            <li class="nav-item active "><a class="nav-link " href="contact.html ">Contact Me<span class="sr-only ">(current)</span></a></li>
+
+                        </ul>
+
                     </div>
-                    <div class="column col-sm-4">
-                        <img src="img/10.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
+                    </div>
+                </nav> -->
+
+
+            </div>
+            <div class="col-lg-10 ">
+                <div class="row row-padding ">
+
+                    <!-- <div class="row "> -->
+                    <div class="column col-lg-4 ">
+                        <img src="img/shoe1.jpg " onclick="openModal();currentSlide(1) " class="hover-shadow ">
+                    </div>
+                    <div class="column col-lg-4 ">
+                        <img src="img/9.jpg " onclick="openModal();currentSlide(2) " class="hover-shadow ">
+                    </div>
+                    <div class="column col-lg-4 ">
+                        <img src="img/10.png " onclick="openModal();currentSlide(3) " class="hover-shadow ">
                     </div>
 
                 </div>
 
-                <div class="row row-padding">
-                    <!-- <div class="row"> -->
-                    <div class="column col-sm-4">
-                        <img src="img/11.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+                <div class="row row-padding ">
+                    <!-- <div class="row "> -->
+                    <div class="column col-lg-4 ">
+                        <img src="img/11.jpg " onclick="openModal();currentSlide(4) " class="hover-shadow ">
                     </div>
                 </div>
             </div>
 
             <!-- The Modal/Lightbox -->
-            <div id="myModal" class="modal padding">
+            <div id="myModal " class="modal padding ">
 
 
-                <span class="close cursor" onclick="closeModal()">&times;</span>
+                <span class="close cursor " onclick="closeModal() ">&times;</span>
 
                 <div class="containter pt-5 pl-5 pr-5 ">
                     <div class="row pt-5 ">
-                        <div class="col-sm-6">
+                        <div class="col-lg-6 ">
 
-                            <div class="modal-content">
+                            <div class="modal-content ">
 
-                                <div class="mySlides">
-                                    <div class="numbertext">1 / 4</div>
-                                    <img src="img/shoe1.jpg" style="width:100%" alt="This is image number one. ">
+                                <div class="mySlides ">
+                                    <div class="numbertext ">1 / 4</div>
+                                    <img src="img/shoe1.jpg " style="width:100% " alt="This is image number one. ">
                                 </div>
 
-                                <div class="mySlides">
-                                    <div class="numbertext">2 / 4</div>
-                                    <img src="img/9.jpg" style="width:100%" alt="This is image number two.">
+                                <div class="mySlides ">
+                                    <div class="numbertext ">2 / 4</div>
+                                    <img src="img/9.jpg " style="width:100% " alt="This is image number two. ">
                                 </div>
 
-                                <div class="mySlides">
-                                    <div class="numbertext">3 / 4</div>
-                                    <img src="img/10.png" style="width:100%" alt="This is image number three.">
+                                <div class="mySlides ">
+                                    <div class="numbertext ">3 / 4</div>
+                                    <img src="img/10.png " style="width:100% " alt="This is image number three. ">
                                 </div>
 
-                                <div class="mySlides">
-                                    <div class="numbertext">4 / 4</div>
-                                    <img src="img/11.jpg" style="width:100%" alt="This is image number four.">
+                                <div class="mySlides ">
+                                    <div class="numbertext ">4 / 4</div>
+                                    <img src="img/11.jpg " style="width:100% " alt="This is image number four. ">
                                 </div>
 
                                 <!-- Next/previous controls -->
-                                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                                <a class="prev " onclick="plusSlides(-1) ">&#10094;</a>
+                                <a class="next " onclick="plusSlides(1) ">&#10095;</a>
 
 
                             </div>
                         </div>
 
 
-                        <div class="col-sm-6">
-                            <div class="demo">
+                        <div class="col-lg-6 ">
+                            <div class="demo ">
                                 <p><br/>FILA Ray Tracer Sneaker </br> $ 75 </br> <i>Details </br> 
                                     Product Sku: 49278781 ; Color Code: 023 </br> 
                                 </br>  </br> 
@@ -125,15 +139,15 @@
                                     - Imported </br> 
                                 </br> 
                                     Size + Fit </br> 
-                                    - Small to fit; order ½ size up </i></p>
+                                    - lgall to fit; order ½ size up </i></p>
                             </div>
-                            <div class="demo">
+                            <div class="demo ">
                                 <p><br/> <i>Untitled </i><br/>Procreate of iPad pro <br/> I drew this image on the beach, inspired by the colors of nature... </p>
                             </div>
-                            <div class="demo">
+                            <div class="demo ">
                                 <p><br/> <i>Untitled </i> <br/>Procreate of iPad pro <br/> A practice that I did to practice drawing jewelry on people.</p>
                             </div>
-                            <div class="demo">
+                            <div class="demo ">
                                 <p><br/> <i>Untitled </i> <br/>Procreate of iPad pro <br/> A practice piece to practice a more illustration, almost story-book style.</p>
                             </div>
 
@@ -148,9 +162,16 @@
         </div>
     </div>
 
-    <footer class="text-center">
-        <a href="https://joylee.herokuapp.com" target="_blank">Created by Joyce Lee | 2019</a>
+    <footer class="text-center ">
+        <a href="https://joylee.herokuapp.com " target="_blank ">Created by Joyce Lee | 2019</a>
     </footer>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+
+
 </body>
 
 </html>
