--- a/portfolio.html
+++ b/portfolio.html
@@ -35,28 +35,17 @@
         <div class="row pt-5 padding">
             <div class="col-lg-2">
 
-
-                <!-- <nav class="navbar navbar-expand-lg navbar-light  navbackground">
-
-                           <div class="container"> 
-
-
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="navbar-brand" style="margin-left:auto; margin-right:0.9rem;" href="index.html">
+                <ul class="text-center" style="list-style-type:none;">
+                    <li>
                         <p style="font-size:2rem;">CHRIS LEE</p>
-                    </div>
-                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                        <ul class="nav nav-stacked ml-auto justify-content-end">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item" "><a class="nav-link " href="portfolio.html ">Projects</a></li>
-                            <li class="nav-item "><a class="nav-link " href="about.html ">About Me</a></li>
-                            <li class="nav-item active "><a class="nav-link " href="contact.html ">Contact Me<span class="sr-only ">(current)</span></a></li>
-
-                        </ul>
-
-                    </div>
-                    </div>
-                </nav> -->
+                    </li>
+                    <li><a href="index.html">Home</a></li>
+                    <li>Design</li>
+                    <li><a href="portfolio.html">Projects</a></li>
+                    <li>Experience</li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
 
 
             </div>
